# MiceWars

./: .gitignore  AI.cpp  CMakeLists.txt  Game.cpp  Game.h  Object.cpp  PlacedWeapon.cpp  Player.h  README.md  RangedWeapon.h  main.cpp
cmake/modules/: FindSDL2_ttf.cmake
src/: AI.cpp  AI.h  Button.cpp  Button.h  ConfigFile.cpp  ConfigFile.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Mouse.cpp  Mouse.h  NotificationBox.cpp  NotificationBox.h  Object.cpp  Object.h  PlacedWeapon.cpp  PlacedWeapon.h  Player.cpp  Player.h  Point.h  RangedWeapon.cpp  RangedWeapon.h  ThrownWeapon.cpp  ThrownWeapon.h  Timer.cpp  Timer.h  Vector.h  Weapon.cpp  Weapon.h  global_vars.h  main.cpp
src/math/: Math2D.h
src/shoot/: LinearTrajectory.h  ParabolicTrajectory.h  Projectile.h  Trajectory.h
